--- a/index.html
+++ b/index.html
@@ -1100,6 +1100,17 @@
   display: block;
   object-fit: cover; /* 自动裁剪维持比例 */
 }
+	.video-info {
+  max-width: 200px; /* 适当调整宽度 */
+}
+
+.video-info h5 {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: block;
+  margin: 0;
+}
 </style>
 </head>
 <body>
