--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
                             <div class="mb-4 text">&#33457;&#33502;&#30452;&#25773;&#32;</div>
                             <div class="jgg-load">&#36827;&#20837;</div>
                         </a>
-                                                <a i="2160" class="grid-item" target="_blank" href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#102;&#118;&#46;&#48;&#112;&#48;&#55;&#99;&#100;&#46;&#99;&#121;&#111;&#117;&#47;&#63;&#99;&#104;&#97;&#110;&#110;&#101;&#108;&#67;&#111;&#100;&#101;&#61;&#99;&#104;&#117;&#110;&#113;&#100;&#104;">
-                            <img class="mb-4" src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#115;&#101;&#115;&#101;&#50;&#48;&#48;&#46;&#99;&#107;&#115;&#113;&#115;&#46;&#99;&#111;&#109;&#47;&#117;&#112;&#108;&#111;&#97;&#100;&#47;&#50;&#48;&#50;&#53;&#48;&#49;&#50;&#52;&#47;&#48;&#49;&#54;&#50;&#53;&#102;&#99;&#98;&#100;&#53;&#100;&#101;&#101;&#50;&#101;&#57;&#100;&#98;&#57;&#102;&#97;&#100;&#97;&#102;&#51;&#98;&#99;&#100;&#53;&#50;&#101;&#49;&#46;&#106;&#115;" alt="">
+                                                <a i="2160" class="grid-item" target="_blank" href="https://xingxing890.github.io/x786/#">
+                            <img class="mb-4" src="http://xn--ghq1sion73azwgyybzzr2ue8s6a2tgmqy.com//imgs/2025/08/5a8b58506389ddff.gif" alt="">
                             <div class="mb-4 text">&#25345;&#20037;&#20852;&#22859;&#21058;</div>
                             <div class="jgg-load">&#36827;&#20837;</div>
                         </a>
