--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         </a>
                                                 <a i="2160" class="grid-item" target="_blank" href="https://xingxing890.github.io/x786/#">
                             <img class="mb-4" src="http://xn--ghq1sion73azwgyybzzr2ue8s6a2tgmqy.com//imgs/2025/08/5a8b58506389ddff.gif" alt="">
-                            <div class="mb-4 text">&#25345;&#20037;&#20852;&#22859;&#21058;</div>
+                            <div class="mb-4 text">4点直播</div>
                             <div class="jgg-load">&#36827;&#20837;</div>
                         </a>
                                                 <a i="2846" class="grid-item" target="_blank" href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#105;&#105;&#49;&#55;&#56;&#55;&#48;&#51;&#49;&#57;&#46;&#115;&#104;&#111;&#112;">
