--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                             <div class="mb-4 text">&#33457;&#33502;&#30452;&#25773;&#32;</div>
                             <div class="jgg-load">&#36827;&#20837;</div>
                         </a>
-                                                <a i="2160" class="grid-item" target="_blank" href="https://xingxing890.github.io/x786/#">
+                                                <a i="2160" class="grid-item" target="_blank" href="https://cdf.8yd2tm.cyou?channelCode=cx13">
                             <img class="mb-4" src="http://xn--ghq1sion73azwgyybzzr2ue8s6a2tgmqy.com//imgs/2025/08/5a8b58506389ddff.gif" alt="">
                             <div class="mb-4 text">4点直播</div>
                             <div class="jgg-load">&#36827;&#20837;</div>
