--- a/index.html
+++ b/index.html
@@ -393,9 +393,9 @@
                             <div class="mb-4 text">&#24555;&#33394;&#35270;&#39057;</div>
                             <div class="jgg-load">&#36827;&#20837;</div>
                         </a>
-                                                <a i="3171" class="grid-item" target="_blank" href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#48;&#111;&#115;&#110;&#116;&#115;&#52;&#99;&#121;&#46;&#110;&#117;&#106;&#112;&#101;&#54;&#57;&#100;&#46;&#116;&#111;&#112;&#63;&#99;&#104;&#97;&#110;&#110;&#101;&#108;&#67;&#111;&#100;&#101;&#61;&#75;&#52;&#49;&#50;&#70;&#66;&#51;&#80;">
-                            <img class="mb-4" src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#115;&#101;&#115;&#101;&#50;&#48;&#48;&#46;&#99;&#107;&#115;&#113;&#115;&#46;&#99;&#111;&#109;&#47;&#117;&#112;&#108;&#111;&#97;&#100;&#47;&#50;&#48;&#50;&#53;&#48;&#52;&#49;&#50;&#47;&#49;&#102;&#102;&#100;&#102;&#55;&#55;&#56;&#97;&#57;&#52;&#102;&#48;&#51;&#51;&#51;&#99;&#57;&#53;&#99;&#48;&#98;&#50;&#55;&#48;&#50;&#54;&#49;&#48;&#97;&#99;&#102;&#46;&#106;&#115;" alt="">
-                            <div class="mb-4 text">&#74;&#75;&#70;&#20813;&#36153;&#29256;</div>
+                                                <a i="3171" class="grid-item" target="_blank" href="https://mmjjcom0624158.sdxyssp.com/008dw80">
+                            <img class="mb-4" src="https://3rv4a884.cc/tp/vns150x150.gif" alt="">
+                            <div class="mb-4 text">注册送8888</div>
                             <div class="jgg-load">&#36827;&#20837;</div>
                         </a>
                                                 <a i="3287" class="grid-item" target="_blank" href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#109;&#103;&#112;&#110;&#99;&#46;&#115;&#99;&#114;&#117;&#103;&#116;&#106;&#102;&#46;&#116;&#111;&#112;&#63;&#99;&#104;&#97;&#110;&#110;&#101;&#108;&#67;&#111;&#100;&#101;&#61;&#71;&#77;&#69;&#68;&#78;&#88;&#49;&#76;">
@@ -458,14 +458,14 @@
                             <div class="mb-4 text">&#28404;&#28404;&#30475;&#29255;</div>
                             <div class="jgg-load">&#36827;&#20837;</div>
                         </a>
-                                                <a i="3299" class="grid-item" target="_blank" href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#110;&#51;&#97;&#122;&#46;&#99;&#109;&#113;&#113;&#52;&#55;&#55;&#115;&#46;&#116;&#111;&#112;&#63;&#99;&#104;&#97;&#110;&#110;&#101;&#108;&#67;&#111;&#100;&#101;&#61;&#49;&#71;&#86;&#76;&#74;&#79;&#68;&#49;">
-                            <img class="mb-4" src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#115;&#101;&#115;&#101;&#50;&#48;&#48;&#46;&#99;&#107;&#115;&#113;&#115;&#46;&#99;&#111;&#109;&#47;&#117;&#112;&#108;&#111;&#97;&#100;&#47;&#50;&#48;&#50;&#53;&#48;&#54;&#49;&#57;&#47;&#57;&#97;&#99;&#57;&#55;&#49;&#56;&#48;&#51;&#56;&#99;&#54;&#49;&#50;&#57;&#52;&#52;&#54;&#101;&#54;&#53;&#55;&#99;&#55;&#57;&#97;&#55;&#102;&#53;&#100;&#97;&#97;&#46;&#106;&#115;" alt="">
-                            <div class="mb-4 text">&#83;&#79;&#85;&#76;</div>
+                                                <a i="3299" class="grid-item" target="_blank" href="https://138.113.7.79:5012/?cid=688732">
+                            <img class="mb-4" src="https://hlb-b9ylsd1q1xiytjqrhh.cn-hongkong.hlb.6wpodh.club/1eljy618axe2itr6kk5f2wtcxv9f6xtq8.gif" alt="">
+                            <div class="mb-4 text">注册送9999</div>
                             <div class="jgg-load">&#36827;&#20837;</div>
                         </a>
-                                                <a i="3301" class="grid-item" target="_blank" href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#57;&#102;&#99;&#52;&#46;&#118;&#116;&#52;&#101;&#121;&#120;&#102;&#119;&#46;&#116;&#111;&#112;&#63;&#99;&#104;&#97;&#110;&#110;&#101;&#108;&#67;&#111;&#100;&#101;&#61;&#87;&#50;&#53;&#74;&#85;&#49;&#52;&#84;">
-                            <img class="mb-4" src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#115;&#101;&#115;&#101;&#50;&#48;&#48;&#46;&#99;&#107;&#115;&#113;&#115;&#46;&#99;&#111;&#109;&#47;&#117;&#112;&#108;&#111;&#97;&#100;&#47;&#50;&#48;&#50;&#53;&#48;&#54;&#49;&#57;&#47;&#99;&#55;&#102;&#100;&#99;&#55;&#57;&#97;&#49;&#98;&#51;&#101;&#49;&#49;&#99;&#98;&#102;&#52;&#50;&#97;&#52;&#97;&#56;&#49;&#55;&#53;&#99;&#49;&#101;&#57;&#51;&#100;&#46;&#106;&#115;" alt="">
-                            <div class="mb-4 text">&#25104;&#20154;&#24230;&#23064;</div>
+                                                <a i="3301" class="grid-item" target="_blank" href="https://b9999y692.vip/">
+                            <img class="mb-4" src="https://imagses.com/i/2025/05/09/163411.gif" alt="">
+                            <div class="mb-4 text">漫画天堂</div>
                             <div class="jgg-load">&#36827;&#20837;</div>
                         </a>
                                                 <a i="2884" class="grid-item" target="_blank" href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#99;&#48;&#57;&#110;&#110;&#48;&#55;&#46;&#122;&#101;&#108;&#107;&#111;&#103;&#108;&#101;&#112;&#97;&#114;&#107;&#108;&#105;&#109;&#98;&#111;&#46;&#99;&#111;&#109;&#47;&#104;&#121;&#47;&#51;&#48;&#49;&#52;&#50;&#47;&#111;&#122;&#100;&#102;&#102;&#49;&#116;&#120;">
